--- a/index3.html
+++ b/index3.html
@@ -260,7 +260,7 @@ mark{background:yellow;color:black}
     <div id="voiceStatus" style="font-size:12px; margin-top:6px; opacity:0.75;"></div>
 
     <div style="display:flex;gap:6px;margin:6px 0">
-      <button id="run">적용 표시</button>
+      <button id="run">검색</button>
       <button id="reset">초기화</button>
     </div>
 
@@ -546,3 +546,4 @@ backToTopBtn.addEventListener('click', ()=>{
 
 </body>
 </html>
+
