--- a/index3.html
+++ b/index3.html
@@ -50,16 +50,14 @@ h1{margin:0;font-size:18px}
   cursor:pointer;
 }
 
-/* ✅ 추가: 헤더 좌측(이름 옆) 탭 버튼 */
+/* ✅ 헤더 좌측(이름 옆) 탭 버튼 */
 .header-left{
   display:flex;
   align-items:center;
   gap:12px;
   min-width:0;
 }
-.brand{
-  min-width:0;
-}
+.brand{min-width:0}
 .tab-buttons{
   display:inline-flex;
   gap:6px;
@@ -81,14 +79,49 @@ h1{margin:0;font-size:18px}
   color:#00120a;
   border-color:rgba(25,195,125,.95);
 }
+
+/* ✅ 모바일 헤더 깨짐 해결 (탭버튼 아래로 + 버튼 축소 + 타이틀 한 줄 유지) */
 @media(max-width:900px){
   .header-inner{flex-direction:column;align-items:stretch}
-  .header-left{justify-content:space-between}
-  .tab-buttons{gap:6px}
-  .tab-btn{padding:10px 12px}
+
+  .header-left{
+    flex-direction:column;
+    align-items:flex-start;
+    gap:8px;
+  }
+
+  h1{
+    font-size:16px;
+    line-height:1.2;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    max-width:100%;
+  }
+  .sub{
+    font-size:11px;
+    line-height:1.2;
+    white-space:nowrap;
+    overflow:hidden;
+    text-overflow:ellipsis;
+    max-width:100%;
+  }
+
+  .tab-buttons{
+    width:100%;
+    gap:6px;
+  }
+  .tab-btn{
+    padding:8px 10px;
+    font-size:12px;
+    border-radius:10px;
+    flex:1;           /* 두 버튼 반반 */
+  }
+
+  .font-controls{justify-content:flex-end}
 }
 
-/* ✅ 추가: 탭 콘텐츠 display 제어 */
+/* ✅ 탭 콘텐츠 display 제어 */
 .tab-content{display:none}
 .tab-content.active{display:block}
 
@@ -215,9 +248,7 @@ mark{background:yellow;color:black}
   z-index:999;
   user-select:none;
 }
-#backToTopBtn:hover{
-  background:rgba(35,60,105,.95);
-}
+#backToTopBtn:hover{background:rgba(35,60,105,.95)}
 
 /* ✅ 음성검색 버튼 스타일 */
 #voiceBtn{
@@ -273,9 +304,7 @@ mark{background:yellow;color:black}
 }
 
 /* ✅ 표준화자료 화면 기본 스타일 */
-.standard-wrap{
-  margin-top:10px;
-}
+.standard-wrap{margin-top:10px}
 .standard-hero{
   background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
   border:1px solid var(--line);
@@ -283,39 +312,23 @@ mark{background:yellow;color:black}
   padding:14px;
   box-shadow:var(--shadow);
 }
-.standard-hero h2{
-  margin:0 0 6px 0;
-  font-size:16px;
-}
-.standard-hero p{
-  margin:0;
-  color:var(--muted);
-  line-height:1.5;
-}
+.standard-hero h2{margin:0 0 6px 0;font-size:16px}
+.standard-hero p{margin:0;color:var(--muted);line-height:1.5}
 .standard-grid{
   display:grid;
   grid-template-columns:repeat(3, 1fr);
   gap:12px;
   margin-top:12px;
 }
-@media(max-width:900px){
-  .standard-grid{grid-template-columns:1fr}
-}
+@media(max-width:900px){.standard-grid{grid-template-columns:1fr}}
 .std-card{
   background:rgba(17,27,46,.72);
   border:1px solid var(--line);
   border-radius:14px;
   padding:12px;
 }
-.std-title{
-  font-weight:900;
-  margin-bottom:6px;
-}
-.std-meta{
-  font-size:12px;
-  color:var(--muted);
-  margin-bottom:10px;
-}
+.std-title{font-weight:900;margin-bottom:6px}
+.std-meta{font-size:12px;color:var(--muted);margin-bottom:10px}
 .std-links a{
   display:block;
   padding:10px 12px;
@@ -326,14 +339,8 @@ mark{background:yellow;color:black}
   text-decoration:none;
   margin-top:6px;
 }
-.std-links a:hover{
-  background:rgba(35,60,105,.35);
-}
-.small-note{
-  margin-top:10px;
-  font-size:12px;
-  color:var(--muted);
-}
+.std-links a:hover{background:rgba(35,60,105,.35)}
+.small-note{margin-top:10px;font-size:12px;color:var(--muted)}
 </style>
 </head>
 
@@ -342,7 +349,6 @@ mark{background:yellow;color:black}
 <header>
   <div class="header-inner">
 
-    <!-- ✅ 좌측: 타이틀 + 탭 버튼(검사기준/표준화자료) -->
     <div class="header-left">
       <div class="brand">
         <h1>승강기 검사기준 시뮬레이터</h1>
@@ -365,9 +371,7 @@ mark{background:yellow;color:black}
 
 <div class="wrap">
 
-  <!-- =========================
-       ✅ 탭 1) 검사기준(기존 화면)
-       ========================= -->
+  <!-- 탭 1) 검사기준 -->
   <section id="criteria" class="tab-content active">
 
     <div class="panel">
@@ -375,7 +379,6 @@ mark{background:yellow;color:black}
 
         <!-- 검사항목 -->
         <div>
-          <!-- 검색창 + 음성버튼 -->
           <div style="display:flex; gap:6px; align-items:center;">
             <input id="search" placeholder="검사항목 or 기준내용 검색">
             <button id="voiceBtn" type="button" aria-label="음성으로 검색" title="음성으로 검색">🎤</button>
@@ -412,9 +415,7 @@ mark{background:yellow;color:black}
 
   </section>
 
-  <!-- =========================
-       ✅ 탭 2) 표준화자료(새 화면)
-       ========================= -->
+  <!-- 탭 2) 표준화자료 -->
   <section id="standard" class="tab-content">
     <div class="standard-wrap">
 
@@ -460,8 +461,7 @@ mark{background:yellow;color:black}
       </div>
 
       <div class="small-note">
-        다음 단계 추천: 표준화자료도 JSON(예: <code>data/standard.json</code>)로 만들어서
-        카테고리/검색/링크 자동 생성하면 유지보수가 편해져.
+        테스트 중입니다.
       </div>
 
     </div>
@@ -487,9 +487,7 @@ const search=document.getElementById('search');
 
 const fontTargets='body, input, button, .topic span, .title, .text, .badge, .range';
 
-/* =========================
-   ✅ 탭 전환(검사기준/표준화자료)
-   ========================= */
+/* ✅ 탭 전환 */
 const tabButtons = document.querySelectorAll(".tab-btn");
 const tabContents = document.querySelectorAll(".tab-content");
 
@@ -504,7 +502,6 @@ tabButtons.forEach(btn=>{
       section.classList.toggle("active", section.id === target);
     });
 
-    // UX: 표준화자료로 가면 상단으로
     window.scrollTo({ top: 0, behavior: "smooth" });
 
     // 표준화자료 탭에서는 검색 돌아가기 버튼 숨김
@@ -536,7 +533,6 @@ fetch('./data/criteria.json')
   renderResults();
 })
 .catch(()=>{
-  // fetch 실패 시(경로 오류 등)에도 화면이 죽지 않게
   resultsEl.innerHTML = `
     <div class="card">
       <div class="title">데이터를 불러오지 못했습니다.</div>
@@ -552,7 +548,6 @@ function renderTopics(){
 
   Object.keys(TITLE_MAP).forEach(t=>{
     if(q){
-      // 제목에 검색어가 포함된 경우만 검사항목에 남김
       const hitTitle = norm(t).includes(q);
       if(!hitTitle) return;
     }
@@ -602,10 +597,8 @@ function isApplied(d,f,t){
 function escapeRegExp(s){
   return (s||'').replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
 }
-
 function highlight(t,k){
   if(!k) return t;
-  // ✅ 검색어에 특수문자 들어가도 깨지지 않게 escape
   const safe = escapeRegExp(k);
   return t.replace(new RegExp(`(${safe})`,'gi'),'<mark>$1</mark>');
 }
@@ -622,16 +615,13 @@ function renderResults(){
   const keyword = norm(search.value);
   const selectedTitles = getSelectedTitles();
 
-  // 검색 결과 타겟 수집
   let matches = [];
   if (keyword) {
-    // 검색어가 있으면 매칭되는 것만
     DATA.forEach((i, idx)=>{
       const hay = norm(i.title+i.label+i.text);
       if(hay.includes(keyword)) matches.push({i, idx});
     });
 
-    // 체크된 검사항목(title) 결과를 상단으로 정렬(안정 정렬)
     matches.sort((a,b)=>{
       const ap = selectedTitles.has(a.i.title) ? 0 : 1;
       const bp = selectedTitles.has(b.i.title) ? 0 : 1;
@@ -639,13 +629,11 @@ function renderResults(){
       return a.idx - b.idx;
     });
   } else {
-    // 검색어 없을 때는 체크된 검사항목만
     document.querySelectorAll('#topics input:checked').forEach(cb=>{
       (TITLE_MAP[cb.value]||[]).forEach(i=>matches.push({i, idx: 0}));
     });
   }
 
-  // 렌더
   matches.forEach(({i})=>{
     const isSelected = selectedTitles.has(i.title);
     const titleHtml = isSelected
@@ -691,10 +679,9 @@ document.querySelectorAll('.preset').forEach(b=>{
   b.onclick=()=>{dateEl.value=b.dataset.d;renderResults();}
 });
 
-/* 검색 돌아가기(맨위로) 버튼 동작 */
+/* 검색 돌아가기(맨위로) 버튼 */
 const backToTopBtn = document.getElementById('backToTopBtn');
 window.addEventListener('scroll', ()=>{
-  // 검사기준 탭일 때만 표시
   const criteriaActive = document.getElementById('criteria').classList.contains('active');
   if(!criteriaActive){
     backToTopBtn.style.display = 'none';
@@ -706,9 +693,7 @@ backToTopBtn.addEventListener('click', ()=>{
   window.scrollTo({ top: 0, behavior: 'smooth' });
 });
 
-/* =========================
-   음성인식(검색용)
-   ========================= */
+/* 음성인식(검색용) */
 (() => {
   const voiceBtn = document.getElementById('voiceBtn');
   const voiceStatus = document.getElementById('voiceStatus');
@@ -726,14 +711,10 @@ backToTopBtn.addEventListener('click', ()=>{
   recognition.continuous = false;
 
   let listening = false;
-
   const setStatus = (msg) => { voiceStatus.textContent = msg || ""; };
 
   voiceBtn.addEventListener('click', () => {
-    if (listening) {
-      recognition.stop();
-      return;
-    }
+    if (listening) { recognition.stop(); return; }
     try {
       listening = true;
       voiceBtn.classList.add('listening');
@@ -749,25 +730,18 @@ backToTopBtn.addEventListener('click', ()=>{
   recognition.onresult = (event) => {
     let interim = "";
     let finalText = "";
-
     for (let i = event.resultIndex; i < event.results.length; i++) {
       const t = event.results[i][0].transcript;
       if (event.results[i].isFinal) finalText += t;
       else interim += t;
     }
-
     const text = (finalText || interim || "").trim();
     search.value = text;
-
-    // 기존 검색 로직 태우기(토픽/결과 자동 갱신)
     search.dispatchEvent(new Event("input", { bubbles: true }));
-
     if (finalText) setStatus(`인식됨: ${finalText.trim()}`);
   };
 
-  recognition.onerror = (event) => {
-    setStatus(`음성인식 오류: ${event.error}`);
-  };
+  recognition.onerror = (event) => { setStatus(`음성인식 오류: ${event.error}`); };
 
   recognition.onend = () => {
     listening = false;
